--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Virtual Documents
+**/.virtual_documents/**
+
