--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,143 @@
-scipy~=1.10.1
-matplotlib~=3.7.2
-numpy~=1.24.3
-pandas~=2.0.3
-geopy~=2.4.1
-gsw~=3.6.17
-src~=0.0.0
-multitaper~=1.2.0
-cmocean~=4.0.3
-mixsea~=0.1.2
-setuptools~=68.2.2
+anyio==4.2.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==4.1.0
+Bottleneck==1.3.7
+Brotli==1.0.9
+Cartopy==0.21.1
+certifi==2024.2.2
+cffi==1.16.0
+cftime==1.6.2
+charset-normalizer==2.0.4
+cmocean==4.0.3
+colorama==0.4.6
+colorlog==5.0.1
+colorspacious==1.1.2
+comm==0.2.1
+contourpy==1.0.5
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+easydev==0.12.0
+exceptiongroup==1.2.0
+executing==0.8.3
+fastjsonschema==2.16.2
+fonttools==4.51.0
+geographiclib==2.0
+geopy==2.4.1
+gsw==3.6.17
+idna==3.7
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+ipykernel==6.28.0
+ipython==8.12.2
+ipywidgets==8.1.2
+jedi==0.18.1
+Jinja2==3.1.3
+json5==0.9.6
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter_client==8.6.0
+jupyter-console==6.6.3
+jupyter_core==5.5.0
+jupyter-events==0.8.0
+jupyter-lsp==2.2.0
+jupyter_server==2.10.0
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.11
+jupyterlab-pygments==0.1.2
+jupyterlab_server==2.25.1
+jupyterlab-widgets==3.0.10
+kiwisolver==1.4.4
+llvmlite==0.36.0
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+missingno==0.4.2
+mistune==2.0.5
+mixsea==0.1.2
+multitaper==1.2.0
+nbclient==0.8.0
+nbconvert==7.3.1
+nbformat==5.9.2
+nest-asyncio==1.6.0
+netCDF4==1.6.2
+notebook==7.0.8
+notebook_shim==0.2.3
+numba==0.53.1
+numexpr==2.8.4
+numpy==1.24.3
+overrides==7.4.0
+packaging==23.2
+pandas==2.0.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+pillow==10.3.0
+pip==23.3.1
+pkgutil_resolve_name==1.3.10
+platformdirs==3.10.0
+ply==3.11
+pooch==1.7.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.43
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.15.1
+pyparsing==3.0.9
+pyproj==3.4.1
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+pyshp==2.3.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.30.2
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.6
+scipy==1.10.1
+seaborn==0.12.2
+Send2Trash==1.8.2
+setuptools==68.2.2
+shapely==2.0.1
+sip==6.7.12
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+spectrum==0.8.1
+src==0.0.0
+stack-data==0.2.0
+terminado==0.17.1
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.3.3
+traitlets==5.7.1
+typing_extensions==4.9.0
+tzdata==2023.3
+unicodedata2==15.1.0
+urllib3==2.1.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.58.0
+wheel==0.41.2
+widgetsnbextension==4.0.10
+xarray==2022.11.0
+zipp==3.17.0
