rename tests in python-app.yml

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,4 @@ jobs:
       run: |
         # Regression Tests to make sure the output remains the same
         pip install pytest pytest-regressions pandas
-        pytest tests/test_data.py 
+        pytest tests/test_data_outputs.py 
