--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,353 @@
-anyio==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.11.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==4.1.0
-Bottleneck==1.3.7
-Brotli==1.0.9
-Cartopy==0.21.1
-certifi==2024.2.2
-cffi==1.16.0
-cftime==1.6.2
-charset-normalizer==2.0.4
-cmocean==4.0.3
-colorama==0.4.6
-colorlog==5.0.1
-colorspacious==1.1.2
-comm==0.2.1
-contourpy==1.0.5
-cycler==0.11.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-easydev==0.12.0
-exceptiongroup==1.2.0
-executing==0.8.3
-fastjsonschema==2.16.2
-fonttools==4.51.0
-geographiclib==2.0
-geopy==2.4.1
-gsw~=3.6.18
-idna==3.7
-importlib-metadata==7.0.1
-importlib-resources==6.1.1
-ipykernel==6.28.0
-ipython==8.12.2
-ipywidgets==8.1.2
-jedi==0.18.1
-Jinja2==3.1.3
-json5==0.9.6
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter_client==8.6.0
-jupyter-console==6.6.3
-jupyter_core==5.5.0
-jupyter-events==0.8.0
-jupyter-lsp==2.2.0
-jupyter_server==2.10.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.11
-jupyterlab-pygments==0.1.2
-jupyterlab_server==2.25.1
-jupyterlab-widgets==3.0.10
-kiwisolver==1.4.4
-llvmlite==0.36.0
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-missingno==0.4.2
-mistune==2.0.5
-mixsea==0.1.2
-multitaper==1.2.0
-nbclient==0.8.0
-nbconvert==7.3.1
-nbformat==5.9.2
-nest-asyncio==1.6.0
-netCDF4==1.6.2
-notebook==7.0.8
-notebook_shim==0.2.3
-numba==0.53.1
-numexpr==2.8.4
-numpy==1.24.3
-overrides==7.4.0
-packaging==23.2
-pandas==2.0.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==10.3.0
-pip==23.3.1
-pkgutil_resolve_name==1.3.10
-platformdirs==3.10.0
-ply==3.11
-pooch==1.7.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.43
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.15.1
-pyparsing==3.0.9
-pyproj==3.4.1
-PyQt5==5.15.10
-PyQt5-sip==12.13.0
-pyshp==2.3.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-referencing==0.30.2
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.10.6
-scipy==1.10.1
-seaborn==0.12.2
-Send2Trash==1.8.2
-setuptools~=69.5.1
-shapely==2.0.1
-sip==6.7.12
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-spectrum==0.8.1
-src==0.0.0
-stack-data==0.2.0
-terminado==0.17.1
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.3.3
-traitlets==5.7.1
-typing_extensions==4.9.0
-tzdata==2023.3
-unicodedata2==15.1.0
-urllib3==2.1.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.58.0
-wheel==0.41.2
-widgetsnbextension==4.0.10
-xarray==2022.11.0
-zipp==3.17.0
-
-pytest~=7.4.4
-rioxarray~=0.13.4
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+affine=2.3.0=pyhd3eb1b0_0
+alsa-lib=1.2.8=h166bdaf_0
+anyio=4.2.0=py38h06a4308_0
+archspec=0.2.3=pyhd3eb1b0_0
+argon2-cffi=21.3.0=pyhd3eb1b0_0
+argon2-cffi-bindings=21.2.0=py38h7f8727e_0
+asttokens=2.0.5=pyhd3eb1b0_0
+async-lru=2.0.4=py38h06a4308_0
+attr=2.5.1=h166bdaf_1
+attrs=23.1.0=py38h06a4308_0
+babel=2.11.0=py38h06a4308_0
+backcall=0.2.0=pyhd3eb1b0_0
+beautifulsoup4=4.12.3=py38h06a4308_0
+blas=1.0=openblas
+bleach=4.1.0=pyhd3eb1b0_0
+blosc=1.21.3=h6a678d5_0
+boltons=23.0.0=py38h06a4308_0
+boost-cpp=1.81.0=he95ae9e_0
+bottleneck=1.3.7=py38ha9d4c09_0
+brotli=1.0.9=h5eee18b_8
+brotli-bin=1.0.9=h5eee18b_8
+brotli-python=1.0.9=py38h6a678d5_8
+bzip2=1.0.8=h5eee18b_6
+c-ares=1.19.1=h5eee18b_0
+ca-certificates=2024.7.2=h06a4308_0
+cairo=1.16.0=ha61ee94_1014
+cartopy=0.21.1=py38h3d2c718_0
+certifi=2024.7.4=py38h06a4308_0
+cffi=1.16.0=py38h5eee18b_1
+cfitsio=4.2.0=hd9d235c_0
+cftime=1.6.2=py38h7deecbd_0
+charset-normalizer=2.0.4=pyhd3eb1b0_0
+click=8.1.7=py38h06a4308_0
+click-plugins=1.1.1=pyhd3eb1b0_0
+cligj=0.7.2=pyhd3eb1b0_0
+cmocean=4.0.3=pyhd8ed1ab_0
+colorama=0.4.6=py38h06a4308_0
+colorlog=5.0.1=py38h06a4308_1
+colorspacious=1.1.2=py38hb070fc8_0
+comm=0.2.1=py38h06a4308_0
+conda=23.9.0=py38h06a4308_0
+conda-libmamba-solver=23.9.3=py38h06a4308_0
+conda-package-handling=2.3.0=py38h06a4308_0
+conda-package-streaming=0.10.0=py38h06a4308_0
+contourpy=1.0.5=py38hdb19cb5_0
+cryptography=41.0.7=py38hdda0065_0
+curl=8.7.1=hdbd6064_0
+cycler=0.11.0=pyhd3eb1b0_0
+cyrus-sasl=2.1.28=h52b45da_1
+dbus=1.13.18=hb2f20db_0
+debugpy=1.6.7=py38h6a678d5_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+distro=1.9.0=py38h06a4308_0
+easydev=0.12.0=pyh6c4a22f_0
+exceptiongroup=1.2.0=py38h06a4308_0
+executing=0.8.3=pyhd3eb1b0_0
+expat=2.6.2=h6a678d5_0
+fftw=3.3.10=nompi_hf0379b8_106
+fmt=9.1.0=hdb19cb5_1
+font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+font-ttf-inconsolata=2.001=hcb22688_0
+font-ttf-source-code-pro=2.030=hd3eb1b0_0
+font-ttf-ubuntu=0.83=h8b1ccd4_0
+fontconfig=2.14.2=h14ed4e7_0
+fonts-anaconda=1=h8fa9717_0
+fonts-conda-ecosystem=1=hd3eb1b0_0
+fonttools=4.51.0=py38h5eee18b_0
+freetype=2.12.1=h4a9f257_0
+freexl=1.0.6=h27cfd23_0
+frozendict=2.4.2=py38h5eee18b_0
+geographiclib=2.0=py38h06a4308_0
+geopy=2.4.1=py38h06a4308_0
+geos=3.11.1=h27087fc_0
+geotiff=1.7.1=h7a142b4_6
+gettext=0.22.5=h59595ed_2
+gettext-tools=0.22.5=h59595ed_2
+giflib=5.2.1=h5eee18b_3
+glib=2.78.1=hfc55251_0
+glib-tools=2.78.1=hfc55251_0
+graphite2=1.3.14=h295c915_1
+gst-plugins-base=1.22.0=h4243ec0_2
+gstreamer=1.22.0=h25f0c4b_2
+gstreamer-orc=0.4.38=hd590300_0
+gsw=3.6.18=py38he82f83a_0
+harfbuzz=6.0.0=h8e241bc_0
+hdf4=4.2.15=h9772cbc_5
+hdf5=1.12.2=nompi_h4df4325_101
+icu=70.1=h27087fc_0
+idna=3.7=py38h06a4308_0
+importlib-metadata=7.0.1=py38h06a4308_0
+importlib_metadata=7.0.1=hd3eb1b0_0
+importlib_resources=6.1.1=py38h06a4308_1
+iniconfig=1.1.1=pyhd3eb1b0_0
+ipykernel=6.28.0=py38h06a4308_0
+ipython=8.12.2=py38h06a4308_0
+ipywidgets=8.1.2=py38h06a4308_0
+jack=1.9.22=h11f4161_0
+jedi=0.18.1=py38h06a4308_1
+jinja2=3.1.4=py38h06a4308_0
+jpeg=9e=h5eee18b_1
+json-c=0.16=h5eee18b_0
+json5=0.9.6=pyhd3eb1b0_0
+jsonpatch=1.33=py38h06a4308_1
+jsonpointer=2.1=pyhd3eb1b0_0
+jsonschema=4.19.2=py38h06a4308_0
+jsonschema-specifications=2023.7.1=py38h06a4308_0
+jupyter=1.0.0=py38h06a4308_9
+jupyter-lsp=2.2.0=py38h06a4308_0
+jupyter_client=8.6.0=py38h06a4308_0
+jupyter_console=6.6.3=py38h06a4308_0
+jupyter_core=5.5.0=py38h06a4308_0
+jupyter_events=0.8.0=py38h06a4308_0
+jupyter_server=2.10.0=py38h06a4308_0
+jupyter_server_terminals=0.4.4=py38h06a4308_1
+jupyterlab=4.0.11=py38h06a4308_0
+jupyterlab_pygments=0.1.2=py_0
+jupyterlab_server=2.25.1=py38h06a4308_0
+jupyterlab_widgets=3.0.10=py38h06a4308_0
+kealib=1.5.0=ha7026e8_0
+kiwisolver=1.4.4=py38h6a678d5_0
+krb5=1.20.1=h143b758_1
+lame=3.100=h7b6447c_0
+lcms2=2.12=h3be6417_0
+ld_impl_linux-64=2.38=h1181459_1
+lerc=4.0.0=h27087fc_0
+libaec=1.1.3=h59595ed_0
+libarchive=3.6.2=h6ac8c49_2
+libasprintf=0.22.5=h661eb56_2
+libasprintf-devel=0.22.5=h661eb56_2
+libbrotlicommon=1.0.9=h5eee18b_8
+libbrotlidec=1.0.9=h5eee18b_8
+libbrotlienc=1.0.9=h5eee18b_8
+libcap=2.66=ha37c62d_0
+libclang=15.0.7=default_h127d8a8_5
+libclang13=15.0.7=default_h5d6823c_5
+libcups=2.3.3=h36d4200_3
+libcurl=8.7.1=h251f7ec_0
+libdap4=3.20.6=hd7c4107_2
+libdb=6.2.32=h6a678d5_1
+libdeflate=1.17=h5eee18b_1
+libedit=3.1.20230828=h5eee18b_0
+libev=4.33=h7f8727e_1
+libevent=2.1.10=h28343ad_4
+libffi=3.4.4=h6a678d5_1
+libflac=1.4.3=h59595ed_0
+libgcc-ng=13.2.0=h77fa898_10
+libgcrypt=1.11.0=h4ab18f5_0
+libgdal=3.6.2=h13e21a6_4
+libgettextpo=0.22.5=h59595ed_2
+libgettextpo-devel=0.22.5=h59595ed_2
+libgfortran-ng=11.2.0=h00389a5_1
+libgfortran5=11.2.0=h1234567_1
+libglib=2.78.1=hebfc3b9_0
+libgomp=13.2.0=h77fa898_10
+libgpg-error=1.50=h4f305b6_0
+libiconv=1.17=hd590300_2
+libkml=1.3.0=h096b73e_7
+libllvm10=10.0.1=hbcb73fb_5
+libllvm14=14.0.6=hdb19cb5_3
+libllvm15=15.0.7=hadd5161_1
+libmamba=1.5.8=hfe524e5_2
+libmambapy=1.5.8=py38h2dafd23_2
+libnetcdf=4.8.1=nompi_h261ec11_106
+libnghttp2=1.57.0=h2d74bed_0
+libnsl=2.0.0=h5eee18b_0
+libogg=1.3.5=h27cfd23_1
+libopenblas=0.3.21=h043d6bf_0
+libopus=1.3.1=h7b6447c_0
+libpng=1.6.39=h5eee18b_0
+libpq=15.2=hb675445_0
+librttopo=1.1.0=ha49c73b_12
+libsndfile=1.2.2=hc60ed4a_1
+libsodium=1.0.18=h7b6447c_0
+libsolv=0.7.29=ha6fb4c9_0
+libspatialite=5.0.1=h221c8f1_23
+libsqlite=3.46.0=hde9e2c9_0
+libssh2=1.11.0=h251f7ec_0
+libstdcxx-ng=13.2.0=hc0a3c3a_10
+libsystemd0=252=h2a991cd_0
+libtiff=4.5.0=h6adf6a1_2
+libtool=2.4.7=h27087fc_0
+libudev1=253=h0b41bf4_0
+libuuid=2.38.1=h0b41bf4_0
+libvorbis=1.3.7=h7b6447c_0
+libwebp-base=1.3.2=h5eee18b_0
+libxcb=1.13=h1bed415_1
+libxkbcommon=1.5.0=h79f4944_1
+libxml2=2.10.3=hca2bb57_4
+libzip=1.9.2=hc929e4a_1
+libzlib=1.2.13=h4ab18f5_6
+llvmlite=0.36.0=py38h612dafd_4
+lz4-c=1.9.4=h6a678d5_1
+markupsafe=2.1.3=py38h5eee18b_0
+matplotlib=3.7.2=py38h06a4308_0
+matplotlib-base=3.7.2=py38h1128e8f_0
+matplotlib-inline=0.1.6=py38h06a4308_0
+menuinst=2.1.1=py38h06a4308_0
+missingno=0.4.2=pyhd3eb1b0_1
+mistune=2.0.4=py38h06a4308_0
+mixsea=0.1.2=pyhd8ed1ab_0
+mpg123=1.32.6=h59595ed_0
+multitaper=1.2.0=pyhd8ed1ab_0
+mysql=5.7.24=h721c034_2
+mysql-common=8.0.32=ha901b37_0
+mysql-libs=8.0.32=hd7da12d_0
+nbclient=0.8.0=py38h06a4308_0
+nbconvert=7.10.0=py38h06a4308_0
+nbformat=5.9.2=py38h06a4308_0
+ncurses=6.4=h6a678d5_0
+nest-asyncio=1.6.0=py38h06a4308_0
+netcdf4=1.6.2=py38h89d13dc_0
+notebook=7.0.8=py38h06a4308_0
+notebook-shim=0.2.3=py38h06a4308_0
+nspr=4.35=h6a678d5_0
+nss=3.89.1=h6a678d5_0
+numba=0.53.1=py38ha9443f7_0
+numexpr=2.8.4=py38hd2a5715_1
+numpy=1.24.3=py38hf838250_0
+numpy-base=1.24.3=py38h1e6e340_0
+openjpeg=2.5.0=hfec8fc6_2
+openssl=3.0.14=h5eee18b_0
+overrides=7.4.0=py38h06a4308_0
+packaging=23.2=py38h06a4308_0
+pandas=2.0.3=py38h1128e8f_0
+pandocfilters=1.5.0=pyhd3eb1b0_0
+parso=0.8.3=pyhd3eb1b0_0
+pcre=8.45=h295c915_0
+pcre2=10.40=hc3806b6_0
+pexpect=4.8.0=pyhd3eb1b0_3
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=10.3.0=py38h5eee18b_0
+pip=24.0=py38h06a4308_0
+pixman=0.40.0=h7f8727e_1
+pkgutil-resolve-name=1.3.10=py38h06a4308_1
+platformdirs=3.10.0=py38h06a4308_0
+pluggy=1.0.0=py38h06a4308_1
+ply=3.11=py38_0
+pooch=1.7.0=py38h06a4308_0
+poppler=22.12.0=h9614445_3
+poppler-data=0.4.11=h06a4308_1
+postgresql=15.2=h3248436_0
+proj=9.1.1=h8ffa02c_2
+prometheus_client=0.14.1=py38h06a4308_0
+prompt-toolkit=3.0.43=py38h06a4308_0
+prompt_toolkit=3.0.43=hd3eb1b0_0
+psutil=5.9.0=py38h5eee18b_0
+ptyprocess=0.7.0=pyhd3eb1b0_2
+pulseaudio=16.1=ha8d29e2_1
+pure_eval=0.2.2=pyhd3eb1b0_0
+pybind11-abi=4=hd3eb1b0_1
+pycosat=0.6.6=py38h5eee18b_1
+pycparser=2.21=pyhd3eb1b0_0
+pygments=2.15.1=py38h06a4308_1
+pyopenssl=23.2.0=py38h06a4308_0
+pyparsing=3.0.9=py38h06a4308_0
+pyproj=3.5.0=py38h8bbf91b_0
+pyqt=5.15.10=py38h6a678d5_0
+pyqt5-sip=12.13.0=py38h5eee18b_0
+pyshp=2.3.1=py38h06a4308_0
+pysocks=1.7.1=py38h06a4308_0
+pytest=7.4.4=py38h06a4308_0
+pytest-datadir=1.5.0=pyhd8ed1ab_0
+pytest-regressions=2.5.0=pyhd8ed1ab_0
+python=3.8.19=h955ad1f_0
+python-dateutil=2.9.0post0=py38h06a4308_2
+python-fastjsonschema=2.16.2=py38h06a4308_0
+python-json-logger=2.0.7=py38h06a4308_0
+python-tzdata=2023.3=pyhd3eb1b0_0
+python_abi=3.8=2_cp38
+pytz=2024.1=py38h06a4308_0
+pyyaml=6.0.1=py38h5eee18b_0
+pyzmq=25.1.2=py38h6a678d5_0
+qt-main=5.15.8=h5d23da1_6
+qtconsole=5.5.1=py38h06a4308_0
+qtpy=2.4.1=py38h06a4308_0
+rasterio=1.3.6=py38hf839189_0
+readline=8.2=h5eee18b_0
+referencing=0.30.2=py38h06a4308_0
+reproc=14.2.4=h6a678d5_2
+reproc-cpp=14.2.4=h6a678d5_2
+requests=2.32.2=py38h06a4308_0
+rfc3339-validator=0.1.4=py38h06a4308_0
+rfc3986-validator=0.1.1=py38h06a4308_0
+rioxarray=0.13.4=pyhd8ed1ab_0
+rpds-py=0.10.6=py38hb02cf49_0
+ruamel.yaml=0.17.21=py38h5eee18b_0
+ruamel.yaml.clib=0.2.6=py38h5eee18b_1
+scipy=1.10.1=py38h32ae08f_1
+seaborn=0.13.2=py38h06a4308_0
+send2trash=1.8.2=py38h06a4308_0
+setuptools=69.5.1=py38h06a4308_0
+shapely=1.8.5=py38hafd38ec_2
+sip=6.7.12=py38h6a678d5_0
+six=1.16.0=pyhd3eb1b0_1
+sniffio=1.3.0=py38h06a4308_0
+snuggs=1.4.7=pyhd3eb1b0_0
+soupsieve=2.5=py38h06a4308_0
+spectrum=0.8.1=py38h01eb140_3
+sqlite=3.45.3=h5eee18b_0
+src=0.0.0=dev_0
+stack_data=0.2.0=pyhd3eb1b0_0
+tbb=2020.3=hfd86e86_0
+terminado=0.17.1=py38h06a4308_0
+tiledb=2.13.2=hd532e3d_0
+tinycss2=1.2.1=py38h06a4308_0
+tk=8.6.14=h39e8969_0
+tomli=2.0.1=py38h06a4308_0
+tornado=6.3.3=py38h5eee18b_0
+tqdm=4.66.4=py38h2f386ee_0
+traitlets=5.14.3=py38h06a4308_0
+typing-extensions=4.11.0=py38h06a4308_0
+typing_extensions=4.11.0=py38h06a4308_0
+tzcode=2024a=h3f72095_0
+tzdata=2024a=h04d1e81_0
+unicodedata2=15.1.0=py38h5eee18b_0
+uriparser=0.9.7=h5eee18b_0
+urllib3=2.2.1=py38h06a4308_0
+wcwidth=0.2.5=pyhd3eb1b0_0
+webencodings=0.5.1=py38_1
+websocket-client=1.8.0=py38h06a4308_0
+wheel=0.43.0=py38h06a4308_0
+widgetsnbextension=4.0.10=py38h06a4308_0
+xarray=2022.11.0=py38h06a4308_0
+xcb-util=0.4.0=h516909a_0
+xcb-util-image=0.4.0=h166bdaf_0
+xcb-util-keysyms=0.4.0=h516909a_0
+xcb-util-renderutil=0.3.9=h166bdaf_0
+xcb-util-wm=0.4.1=h516909a_0
+xerces-c=3.2.4=h55805fa_1
+xkeyboard-config=2.38=h0b41bf4_0
+xorg-kbproto=1.0.7=h7f98852_1002
+xorg-libice=1.1.1=hd590300_0
+xorg-libsm=1.2.4=h7391055_0
+xorg-libx11=1.8.4=h0b41bf4_0
+xorg-libxext=1.3.4=h0b41bf4_2
+xorg-libxrender=0.9.10=h7f98852_1003
+xorg-renderproto=0.11.1=h7f98852_1002
+xorg-xextproto=7.3.0=h0b41bf4_1003
+xorg-xproto=7.0.31=h27cfd23_1007
+xz=5.4.6=h5eee18b_1
+yaml=0.2.5=h7b6447c_0
+yaml-cpp=0.8.0=h6a678d5_1
+zeromq=4.3.5=h6a678d5_0
+zipp=3.17.0=py38h06a4308_0
+zlib=1.2.13=h4ab18f5_6
+zstandard=0.22.0=py38h2c38b39_0
+zstd=1.5.5=hc292b87_2
